--- a/kasa/src/styles/pages/_housing.scss
+++ b/kasa/src/styles/pages/_housing.scss
@@ -73,8 +73,8 @@ p {
 .housing-collapses {
   display: flex;
   gap: 50px;
-
   margin-top: 30px;
+  align-items: stretch;
 
   .equipment-list li {
   list-style: none;
@@ -85,6 +85,8 @@ p {
 
 .housing-collapses > * {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .housing-infos {
